--- a/frontend/src/style/BackToTopButton.css
+++ b/frontend/src/style/BackToTopButton.css
@@ -1,6 +1,6 @@
 .back-to-top-button {
     position: fixed;
-    bottom: 80px;
+    bottom: 22px;
     right: 20px;
     z-index: 99;
     background-color: #00c68a;
